Fixing overlapping autocomplete controls on smaller inputs

--- a/app/javascript/components/form/components/styles.css
+++ b/app/javascript/components/form/components/styles.css
@@ -128,10 +128,21 @@
 
 :global [dir="rtl"] .MuiAutocomplete-endAdornment {
   right: initial !important;
-  left: 9px !important;
+  margin-left: 9px !important;
+  left: 0;
 }
 
 :global .MuiAutocomplete-endAdornment {
-  right: 9px !important;
+  position: relative !important;
+  margin-right: 9px !important;
   left: initial !important;
+  right: 0 !important;
+}
+
+:global .MuiAutocomplete-inputRoot {
+  display: flex;
+}
+
+:global .MuiAutocomplete-inputRoot input {
+  padding: 9.5px !important;
 }
