--- a/app/javascript/components/insights-filters/styles.css
+++ b/app/javascript/components/insights-filters/styles.css
@@ -27,6 +27,7 @@
   display: flex;
   flex-wrap: wrap;
   flex: 2 !important;
+  gap: var(--sp-1);
   justify-content: space-between;
 
   & > div {
